--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     padding: 0;
 
 }
+body {
+    font-family:  sans-serif;
+}
+
 header{
     display: flex;
     justify-content: space-between;
@@ -20,7 +24,7 @@ header ul{
     align-items: center;
     justify-content:space-around;
     text-align: center;
-
+}
     .hero-section h1 {
         font-size: 50px;
         margin-bottom: 10px;
@@ -32,7 +36,7 @@ header ul{
     }
     
     .hero-section .Menu {
-        background-color: #ff9800;
+        background-color: #ff5e00df;
         color: white;
         font-size: 20px;
         padding: 12px 25px;
@@ -41,4 +45,82 @@ header ul{
         cursor: pointer;
         transition: 0.3s;
     }
+
+
+
+/* This is Culinary Section */
+
+.culinary{
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+}
+
+.culinaryHeading{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+    gap: 0.5rem;
+}
+
+.culinaryHeading h2{
+    color: #ff5e00df;
+}
+.culinaryHeading p{
+    font-size: 1rem;
+}
+
+.culinaryCards{
+    display: flex;
+    flex-wrap: wrap;
+}
+.culinaryClass{
+    width: 30%;
+    height: 400px;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    margin: 10px;
+}
+
+.culinaryCards img{
+    width: 100%;
+    height: 300px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    object-fit: cover;
+}
+.culinaryCards h4{
+    padding: 10px 15px;
+    font-size: 1.3rem;
+    text-transform: capitalize;
+}
+.culinaryCards p{
+    padding: 0px 15px 10px 15px;
+    text-transform: capitalize;
+}
+
+
+
+/* This is Our story Section */
+.ourStory{
+    display: flex;
+    padding: 50px;
+}
+
+.ourStoryImg img{
+    border-radius: 10px;
+    margin: 10px;
+}
+.ourStoryBody{
+    margin: 40px 20px;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    padding: 15px 30px;
+}
+
+.ourStoryBody h2{
+    color: #ff5e00df;
+    padding: 10px;
 }
